fixed icons spacing

--- a/styles/animated-icon.scss
+++ b/styles/animated-icon.scss
@@ -14,6 +14,7 @@
 }
 
 .icon-container {
+    padding-top: 4rem;
     width: 15rem;
     height: 15rem;
     display: flex;
@@ -66,6 +67,7 @@
 
 @media screen and (max-width: 732px){
     .icon-container {
+        padding-top: 2rem;
         width: 10rem;
         height: 10rem;
         display: flex;
