--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -142,6 +142,7 @@
 }
 
 .icon-container {
+  padding-top: 4rem;
   width: 15rem;
   height: 15rem;
   display: -webkit-box;
@@ -205,6 +206,7 @@
 
 @media screen and (max-width: 732px) {
   .icon-container {
+    padding-top: 2rem;
     width: 10rem;
     height: 10rem;
     display: -webkit-box;
